Iptables/OpenVPN iptables
# Generated by iptables-save v1.4.21 
#Ubuntu Trusty
*mangle
:PREROUTING ACCEPT [11858:1539978]
:INPUT ACCEPT [5316:665524]
:FORWARD ACCEPT [6438:842628]
:OUTPUT ACCEPT [3723:855684]
:POSTROUTING ACCEPT [10161:1698312]
COMMIT

# Generated by iptables-save v1.4.21 
*nat
:PREROUTING ACCEPT [138:34788]
:INPUT ACCEPT [12:2462]
:OUTPUT ACCEPT [8:916]
:POSTROUTING ACCEPT [8:916]
-A POSTROUTING -s 10.8.0.0/24 -o <interface name> -j MASQUERADE
-A POSTROUTING -s 10.8.0.0/24 -d <destination network> -o <interface name> -j MASQUERADE
-A POSTROUTING -s 10.8.0.0/24 -d <destination network> -o <interface name> -j MASQUERADE
-A POSTROUTING -s 10.8.0.0/24 -d <destination network> -o <interface name> -j MASQUERADE
-A POSTROUTING -s 10.8.0.0/24 -d <destination network> -o <interface name> -j MASQUERADE
-A POSTROUTING -s 10.8.0.0/24 -d <destination network> -o <interface name> -j MASQUERADE
-A POSTROUTING -s 10.8.0.0/24 -d <destination network> -o <interface name> -j MASQUERADE
-A POSTROUTING -s 10.8.0.0/24 -d <destination network> -o <interface name> -j MASQUERADE
COMMIT

# Generated by iptables-save v1.4.21 
*filter
:INPUT ACCEPT [5316:665524]
:FORWARD ACCEPT [6438:842628]
:OUTPUT ACCEPT [3723:855684]
COMMIT
