Iptables/rules-iptables
FW1
# Generated by iptables-save v1.6.0 on Tue Feb 11 03:44:22 2020
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [6:312]
:OUTPUT ACCEPT [1198:66172]
:POSTROUTING ACCEPT [1270:70780]
-A PREROUTING -j LOG --log-prefix "PRE-- "
-A INPUT -j LOG --log-prefix "INPUT-- "
-A OUTPUT -j LOG --log-prefix "OUTPUT-- "
-A POSTROUTING -j LOG --log-prefix "POST-- "
-A POSTROUTING -o ens6 -j MASQUERADE

COMMIT
# Completed on Tue Feb 11 03:44:22 2020
# Generated by iptables-save v1.6.0 on Tue Feb 11 03:44:22 2020
*filter
:INPUT ACCEPT [4459:320913]
:FORWARD ACCEPT [562:40162]
:OUTPUT ACCEPT [4354:491717]
-A FORWARD -i ens6 -o ens3 -j ACCEPT
-A FORWARD -i ens3 -o ens6 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Tue Feb 11 03:44:22 2020
